<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/largeScale"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_background"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/smallScale"
        tools:ignore="RtlSymmetry,UselessParent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="@dimen/profilePictureScale"
            android:layout_height="@dimen/profilePictureScale"
            android:layout_margin="@dimen/mediumScale"
            android:src="@drawable/profile_picture"
            app:shapeAppearanceOverlay="@style/roundedImage" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingTop="@dimen/mediumScale">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/personName"
                android:textColor="@color/black"
                android:textSize="@dimen/largeFontSize" />

            <TextView
                style="@style/MediumText.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smallScale"
                android:text="@string/speciality" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smallScale"
                android:drawablePadding="@dimen/teenyScale"
                android:fontFamily="@font/dm_sans_regular"
                android:text="@string/location"
                android:textColor="@color/dark_blue_60_opacity"
                android:textSize="@dimen/minorFontSize"
                app:drawableStartCompat="@drawable/location_icon"
                app:drawableTint="@color/red" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smallScale"
                android:layout_marginBottom="@dimen/smallScale"
                android:orientation="horizontal">

                <TextView
                    style="@style/RegularText.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reviewsCount" />

                <TextView
                    style="@style/MediumText.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/smallScale"
                    android:drawablePadding="@dimen/teenyScale"
                    android:text="@string/rating"
                    app:drawableEndCompat="@drawable/star_icon" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical"
            android:paddingTop="@dimen/mediumScale"
            tools:ignore="RtlHardcoded">

            <TextView
                style="@style/RegularText.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/smallScale"
                android:background="@drawable/time_background"
                android:paddingHorizontal="@dimen/smallScale"
                android:paddingVertical="@dimen/teenyScale"
                android:text="@string/remainingTime" />

            <TextView
                style="@style/MediumText.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/minorScale"
                android:text="@string/country" />

            <TextView
                style="@style/RegularText.LightBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/publishTime" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>